--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,17 @@ body {
 	height: 100%;
 	font-family:Quicksand,sans-serif;
   padding-top: 70px;
-  background: #f9f9f9;
+  background: #fff;
+  /*background: #f9f9f9;*/
+}
+
+h1 {
+  border-bottom: 4px solid #FF4242;
+  color: #3b3b3b;
+  display: inline-block;
+  letter-spacing: 1px;
+  padding-bottom: 10px;
+  line-height: 40px;
 }
 
 #slider img {
@@ -60,7 +70,7 @@ section {
 }
 
 footer {
-  background: #9B9A9A;
+  background: #383838;
   color: #fff;
 }
 
@@ -79,7 +89,7 @@ footer nav ul li {
 footer nav ul li a,
 footer nav ul li p {
   text-decoration: none;
-  color: #000;
+  color: #c7c7c7;
 }
 
 footer nav ul li a { 
@@ -586,4 +596,9 @@ footer nav ul li h4 {
 #map {
   width: 100%;
   height: auto;
+}
+
+.black {
+  color: #fff;
+  background: #000;
 }
