--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,13 @@
     <section id="slider">
       <div id="owl-demo" class="owl-carousel">
-        <div><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
-        <div><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
-        <div><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
+        <div class="item"><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
+        <div class="item"><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
+        <div class="item"><a href="#"><img src="admin/images/slider/slider01.jpg"></a></div>
       </div>
     </section>
 
     <section id="catalogos" class="container">
-      <h2>Catálogos</h2>
+      <h1>Catálogos</h1>
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#dama">Dama</a></li>
         <li><a data-toggle="tab" href="#caballero">Caballero</a></li>
@@ -77,7 +77,7 @@
     </section>
 
     <section class="container">
-      <h2>Marcas</h2>
+      <h1>Marcas</h1>
       <div id="slider-marcas" class="owl-carousel owl-theme">
         <div class="item"><a href="#"></a></div>
         <div class="item"><a href="#"></a></div>
