--- a/views/menu.html
+++ b/views/menu.html
@@ -1,5 +1,24 @@
+<div class="container-navbar-full navbar-fixed-top black">
+  <nav class="navbar navbar-default container navbar-full no-shadow navbar-inverse">
+    <div class="hidden-xs">
+      <span class="navbar-text"><i class="fa fa-mobile"></i> 11 123 456 7890  <i class="fa fa-envelope"></i> info@sitename.com</span>
+    </div>
+    <form class="navbar-form navbar-right" role="search">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Buscar">
+        <span class="input-group-btn">
+          <button class="btn btn-white" type="button"><i class="fa fa-search"></i></button>
+        </span>
+      </div>
+    </form>
+  </nav>
+</div>
 
-<div class="container-navbar-full navbar-fixed-top">
+<div class="container-fluid navbar-fixed-top visible-xs white">
+  <img id="logo-big" src="img/logo.png"/>
+</div>
+
+<div class="container-navbar-full navbar-fixed-top white">
   <nav class="navbar navbar-default container navbar-full no-shadow" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle btn-red collapsed" data-toggle="collapse"
