--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,53 +1,57 @@
 
 /*- - - - - - - - - - - -  BUTTONS - - - - - - - - - - -*/
-/*
 
-.btn-red { 
-  color: #FFFFFF; 
-  background-color: #FF0000; 
-  border-color: #FF0000; 
-} 
- 
-.btn-red:hover, 
-.btn-red:focus, 
-.btn-red:active, 
-.btn-red.active, 
-.open .dropdown-toggle.btn-red { 
-  color: #FF0000; 
+.btn-white { 
+  color: #ff0000; 
   background-color: #FFFFFF; 
-  border-color: #FF0000; 
+  border-color: #FFFFFF; 
 } 
  
-.btn-red:active, 
-.btn-red.active, 
-.open .dropdown-toggle.btn-red { 
+.btn-white:hover, 
+.btn-white:focus, 
+.btn-white:active, 
+.btn-white.active, 
+.open .dropdown-toggle.btn-white { 
+  color: #ff0000; 
+  background-color: #FFFFFF; 
+  border-color: #FFFFFF; 
+} 
+ 
+.btn-white:active, 
+.btn-white.active, 
+.open .dropdown-toggle.btn-white { 
   background-image: none; 
 } 
  
-.btn-red.disabled, 
-.btn-red[disabled], 
-fieldset[disabled] .btn-red, 
-.btn-red.disabled:hover, 
-.btn-red[disabled]:hover, 
-fieldset[disabled] .btn-red:hover, 
-.btn-red.disabled:focus, 
-.btn-red[disabled]:focus, 
-fieldset[disabled] .btn-red:focus, 
-.btn-red.disabled:active, 
-.btn-red[disabled]:active, 
-fieldset[disabled] .btn-red:active, 
-.btn-red.disabled.active, 
-.btn-red[disabled].active, 
-fieldset[disabled] .btn-red.active { 
-  background-color: #FF0000; 
-  border-color: #FF0000; 
+.btn-white.disabled, 
+.btn-white[disabled], 
+fieldset[disabled] .btn-white, 
+.btn-white.disabled:hover, 
+.btn-white[disabled]:hover, 
+fieldset[disabled] .btn-white:hover, 
+.btn-white.disabled:focus, 
+.btn-white[disabled]:focus, 
+fieldset[disabled] .btn-white:focus, 
+.btn-white.disabled:active, 
+.btn-white[disabled]:active, 
+fieldset[disabled] .btn-white:active, 
+.btn-white.disabled.active, 
+.btn-white[disabled].active, 
+fieldset[disabled] .btn-white.active { 
+  background-color: #FFFFFF; 
+  border-color: #FFFFFF; 
 } 
  
-.btn-red .badge { 
-  color: #FF0000; 
-  background-color: #FFFFFF; 
+.btn-white .badge { 
+  color: #FFFFFF; 
+  background-color: #ff0000; 
 }
-*/
+
+
+
+
+
+
 
 .btn-red { 
   color: #FFFFFF; 
