--- a/views/footer.html
+++ b/views/footer.html
@@ -41,7 +41,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.js"><\/script>')</script>
     <!--<script src="js/vendor/bootstrap.min.js"></script>-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
@@ -55,15 +55,22 @@
       $(document).ready(function() {
 
         $("#owl-demo").owlCarousel({
-          autoPlay : 3000,
-          stopOnHover : true,
-          navigation:true,
-          paginationSpeed : 1000,
-          goToFirstSpeed : 2000,
-          singleItem : true,
-          autoHeight : true,
-          transitionStyle:"fade"
+          items:1,
+          loop:true,
+          margin:10,
+          autoplay:true,
+          autoplayTimeout:3000,
+          autoplayHoverPause:true,
+          animateOut: 'fadeOutUp',
+          //animateIn: 'fadeOutUp',
         });
+
+        $('.play').on('click',function(){
+          owl.trigger('autoplay.play.owl',[1000])
+        })
+        $('.stop').on('click',function(){
+          owl.trigger('autoplay.stop.owl')
+        })
 
           var owl = $("#slider-marcas");
  
