--- a/views/home.html
+++ b/views/home.html
@@ -9,10 +9,10 @@
     <section id="catalogos" class="container">
       <h1>Catálogos</h1>
       <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#dama">Dama</a></li>
-        <li><a data-toggle="tab" href="#caballero">Caballero</a></li>
-        <li><a data-toggle="tab" href="#infantil">Infantil</a></li>
-        <li><a data-toggle="tab" href="#especial">Especial</a></li>
+        <li class="active"><a data-toggle="tab" href="#dama">Dama <i class="fa fa-chevron-down"></i></a></li>
+        <li><a data-toggle="tab" href="#caballero">Caballero <i class="fa fa-chevron-down"></i></a></li>
+        <li><a data-toggle="tab" href="#infantil">Infantil <i class="fa fa-chevron-down"></i></a></li>
+        <li><a data-toggle="tab" href="#especial">Especial <i class="fa fa-chevron-down"></i></a></li>
       </ul>
 
       <div class="tab-content">
@@ -20,38 +20,26 @@
           <div class="container-fluid">
             <div class="row">
               <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
+                <figure class="col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_1.jpg" alt="Catalogo 1"/>
                   <figcaption>Sandalias</figcaption>
                 </figure>
               </a>
               <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
+                <figure class="col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_2.jpg" alt="Catalogo 2"/>
                   <figcaption>Sandalias</figcaption>
                 </figure>
               </a>
               <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
+                <figure class="col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_3.jpg" alt="Catalogo 3"/>
                   <figcaption>Sandalias</figcaption>
                 </figure>
               </a>
               <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
+                <figure class="col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_4.jpg" alt="Catalogo 4"/>
-                  <figcaption>Sandalias</figcaption>
-                </figure>
-              </a>
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
-                  <img src="admin/images/catalogos/catalogo_5.jpg" alt="Catalogo 5"/>
-                  <figcaption>Sandalias</figcaption>
-                </figure>
-              </a>
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-6 col-md-2">
-                  <img src="admin/images/catalogos/catalogo_7.jpg" alt="Catalogo 6"/>
                   <figcaption>Sandalias</figcaption>
                 </figure>
               </a>
