--- a/views/home.html
+++ b/views/home.html
@@ -18,31 +18,67 @@
       <div class="tab-content">
         <div id="dama" class="tab-pane fade in active">
           <div class="container-fluid">
-            <div class="row">
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-4 col-md-3">
+            <div class="row content">
+              <div class="catalogo">
+                <figure class="col-xs-12 col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_1.jpg" alt="Catalogo 1"/>
-                  <figcaption>Sandalias</figcaption>
+                  <div class="overlay">
+                    <ul>
+                      <li>
+                        <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                      </li>
+                      <li>
+                        <button type="button" class="btn btn-lg btn-red"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></button>
+                      </li>
+                    </ul>
+                  </div>
                 </figure>
-              </a>
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-4 col-md-3">
+              </div>
+              <div class="catalogo">
+                <figure class="col-xs-12 col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_2.jpg" alt="Catalogo 2"/>
-                  <figcaption>Sandalias</figcaption>
+                  <div class="overlay">
+                    <ul>
+                      <li>
+                        <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                      </li>
+                      <li>
+                        <button type="button" class="btn btn-lg btn-red"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></button>
+                      </li>
+                    </ul>
+                  </div>
                 </figure>
-              </a>
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-4 col-md-3">
+              </div>
+              <div class="catalogo">
+                <figure class="col-xs-12 col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_3.jpg" alt="Catalogo 3"/>
-                  <figcaption>Sandalias</figcaption>
+                  <div class="overlay">
+                    <ul>
+                      <li>
+                        <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                      </li>
+                      <li>
+                        <button type="button" class="btn btn-lg btn-red"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></button>
+                      </li>
+                    </ul>
+                  </div>
                 </figure>
-              </a>
-              <a class="catalogo" href="admin/catalogos/Sandalias.pdf" target="_blank">
-                <figure class="col-sm-4 col-md-3">
+              </div>
+              <div class="catalogo">
+                <figure class="col-xs-12 col-sm-4 col-md-3">
                   <img src="admin/images/catalogos/catalogo_4.jpg" alt="Catalogo 4"/>
-                  <figcaption>Sandalias</figcaption>
+                  <div class="overlay">
+                    <ul>
+                      <li>
+                        <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                      </li>
+                      <li>
+                        <button type="button" class="btn btn-lg btn-red"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></button>
+                      </li>
+                    </ul>
+                  </div>
                 </figure>
-              </a>
+              </div>
             </div>
           </div>
         </div>
