--- a/views/footer.html
+++ b/views/footer.html
@@ -1,24 +1,24 @@
-    <footer class="">
+    <footer>
       <div class="container">
         <div class="row">
           <nav class="col-md-3">
+            <h4>Catálogos</h4>
             <ul>
-              <li><h4>Catálogos</h4></li>
               <li><a href="index.php?ctrl=productos&action=list">Dama</a></li>
               <li><a href="index.php?ctrl=productos&action=list">Caballero</a></li>
               <li><a href="index.php?ctrl=productos&action=list">Infantil</a></li>
             </ul>
           </nav>
           <nav class="col-md-3">
+            <h4>Políticas</h4>
             <ul>
-              <li><h4>Políticas</h4></li>
               <li><a href="#">Términos y Condiciones</a></li>
               <li><a href="#">Aviso de Privacidad</a></li>
             </ul>
           </nav>
           <nav class="col-md-3">
+            <h4>Mi cuenta</h4>
             <ul>
-              <li><h4>Mi cuenta</h4></li>
               <li><a href="#">Mi cuenta</a></li>
               <li><a href="index.php?ctrl=shopping-cart&action=list">Mis pedidos</a></li>
               <li><a href="index.php?ctrl=shopping-cart&action=list">Mi carrito</a></li>
@@ -26,14 +26,14 @@
             </ul>
           </nav>
           <nav class="col-md-3">
-            <ul>
-              <li><h4>Contáctanos</h4></li>
-              <li><p>Boulevard Puerta de Hierro #549</p></li>
-              <li><p>Zona Residencial</p></li>
-              <li><p>Zapopan, Jalisco</p></li>
-              <li><p>01 33 1234 5700</p></li>
-              <li><p>andrea@mail.com</p></li>
-            </ul>
+            <h4>Contáctanos</h4>
+            <div>
+              <p>Boulevard Puerta de Hierro #549</p>
+              <p>Zona Residencial</p>
+              <p>Zapopan, Jalisco</p>
+              <p>01 33 1234 5700</p>
+              <p>andrea@mail.com</p>
+            </div>
           </nav>
         </div> 
       </div>
