--- a/css/forms.css
+++ b/css/forms.css
@@ -40,8 +40,21 @@ form label {
   text-align: left!important;
 }
 
+.input-group {
+  width: 100%;
+}
+
+.input-group-addon,
 .input-group-btn {
   background: #fff;
-  border-radius: 0;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
+
+.input-group-addon {
+  width: 34px;
+}
+
+
 
