--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
 @import url(http://fonts.googleapis.com/css?family=Quicksand:300,400,700);
-
+@import url('modal.css');
 @import url('footer.css');
 
 html {
