--- a/views/menu.html
+++ b/views/menu.html
@@ -98,16 +98,16 @@
         <div class="modal-body">
           <div class="login">
             <form role="form" onsubmit="return validateLogin()" data-validate-login>
-              <div>
-                <div class="form-group">
-                  <label>Usuario</label>
-                  <input type="text" class="form-control" placeholder="Email" data-required data-email/>
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon" id="user-addon"><i class="fa fa-user"></i></span>
+                  <input type="text" class="form-control" placeholder="Usuario" aria-describedby="user-addon" data-required data-email/>
                 </div>
               </div>
-              <div>
-                <div class="form-group">
-                  <label>Contraseña</label>
-                  <input type="password" class="form-control" placeholder="Password" data-required data-password/>
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon" id="password-addon"><i class="fa fa-key"></i></span>
+                  <input type="password" class="form-control" placeholder="Contraseña" aria-describedby="password-addon" data-required data-password/>
                 </div>
               </div>
   
