--- a/views/menu.html
+++ b/views/menu.html
@@ -112,21 +112,20 @@
               </div>
   
               <button class="btn btn-red btn-lg btn-block" type="submit">
-                <i class="fa fa-sign-in"></i> Enviar
+                <i class="fa fa-check"></i> Enviar
               </button>
-              <a href="https://www.facebook.com/" target="_blank" class="btn btn-lg btn-block btn-facebook"> <i class="fa fa-facebook"></i> Facebook</a>
-              <a href="https://twitter.com/" target="_blank" class="btn btn-lg btn-block btn-twitter"> <i class="fa fa-twitter"></i> Twitter</a>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> No cerrar sesión
-                </label>
-              </div>
+              <a href="https://www.facebook.com/" target="_blank" class="btn btn-lg btn-block btn-facebook"> 
+                <i class="fa fa-facebook"></i> Facebook
+              </a>
+              <a href="https://twitter.com/" target="_blank" class="btn btn-lg btn-block btn-twitter">
+                <i class="fa fa-twitter"></i> Twitter
+              </a>
             </form>
           </div>
         </div>
         <div class="modal-footer modal-footer-dark">
-          <a href="index.php?ctrl=usuario&action=recuperar" class="btn btn-link">Recuperar contraseña</a>
-          <a href="index.php?ctrl=usuario&action=registro" class="btn btn-link pull-right">Nueva cuenta</a>
+          <a href="index.php?ctrl=usuario&action=recuperar" class="btn btn-link">¿Olvidaste la contraseña?</a>
+          <a href="index.php?ctrl=usuario&action=registro" class="btn btn-link pull-right">¡Regístrate!</a>
         </div>
       </div>
     </div>
